fix: missing repository field

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
       }
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/noprofessional/deco"
+  },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
